3.0.0
    2017-03-05
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #63: add quantity discounts / graduated prices for products
    * TASK #56: different shipping / payment configurations for different countries
    * TASK #58: add main category and canonical url for category detail views
    * BUGFIX #73: change output of product variants sku to variants completeSku for products with variants in cart and order mail
    * TASK #68: add signal slot for checking products before adding them to cart
    * TASK #76: realurl improvements
    * TASK #74: show vat in cart summary and mails
    * TASK #77: add signal slot to change order item before saving
    * TASK #78: use testing framework instead of typo3 source
    * TASK #79: add signal slot before and after handle payment
    * TASK #80: move external product storage handling to signal slot
    * TASK #82: make *_date fields in order items read only
    * TASK #81: refactor generate*Number actions
    * TASK #48: required field by variants
    * TASK #10: add empty option to select view helper
    * TASK #66: update payment and shipping in backend module

2.4.3
    2017-02-18
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #71: fix travis configuration

2.4.2
    2017-02-07
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #70: special price condition fails in some cases

2.4.1
    2017-02-07
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #69: validation error on special prices without a title

2.4.0
    2017-02-07
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #62: make mail subject configurable

2.3.2
    2017-01-25
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #67: save comment in order item

2.3.1
    2017-01-23
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #65: save configured currency sign to order item

2.3.0
    2017-01-21
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #57: add ability of backend sorting for products

2.2.0