@@ -1,5 +1,5 @@
 3.0.0
-    2017-03-05
+    2017-03-06
     Daniel Lorenz <daniel.lorenz@extco.de>
 
     * TASK #63: add quantity discounts / graduated prices for products
@@ -18,6 +18,7 @@
     * TASK #48: required field by variants
     * TASK #10: add empty option to select view helper
     * TASK #66: update payment and shipping in backend module
+    * BUGFIX #84: error in display condition of ProductPlugin.xml flexform
 
 2.4.3
     2017-02-18
